
[metadata]
name = ultraviolet

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    ultraviolet_views = ultraviolet.views:create_blueprint
invenio_assets.webpack =
    ultraviolet_theme = ultraviolet.webpack:theme
invenio_base.finalize_app =
    ultraviolet_customizations = ultraviolet.customizations:customize_menus